--- a/Portfolio/Mobile_App.html
+++ b/Portfolio/Mobile_App.html
@@ -39,20 +39,20 @@
         <div class="mobile">
             <p>I made this web page in my Mobile App class.I implemented a password-based entry page and a page to get basic information about the boiler such as the boiler ID, 
                date of purchase, maximum allowable values of pressure and temperature, and an ability to change the password. I created a page to allow the user to change the basic 
-               information about the boiler and a page to enter data — temperature and pressure.
-               In this Game, the user needs to click on the UFOs to destroy them.
-               Using jQuery, the user clicks on the page button in order to swing the bat and hit the baseball in this game.
-               Even though the course covered mobile design using jQuery UI, a framework called Bootstrap is used more widely in the industry to make responsive web pages.
-               I used Bootstrap in order to display the nine Skywalker Saga Star Wars movies over three different pages in this Site.
-               I used Flexbox in order to format this page based on my favorite childhood hobby, which was playing Nintendo and Super Nintendo games.
-               When the user clicks on this page, the picture increases in size from 50 pixels to 500 pixels and the font size of the title increases, too. 
+               information about the boiler and a page to enter data — temperature and pressure.</p>
+             <br><p>In this Game, the user needs to click on the UFOs to destroy them before they land on Earth.</p>
+             <br><p>Using jQuery, the user clicks on the page button in order to swing the bat and hit the baseball in this game.</p>
+             <br><p>Even though the course covered mobile design using jQuery UI, a framework called Bootstrap is used more widely in the industry to make responsive web pages.
+               I used Bootstrap in order to display the nine Skywalker Saga Star Wars movies over three different pages in this Site.</p>
+             <br><p>I used Flexbox in order to format this page based on my favorite childhood hobby, which was playing Nintendo and Super Nintendo games.</p>
+             <br><p>When the user clicks on this page, the picture increases in size from 50 pixels to 500 pixels and the font size of the title increases, too. 
                There are two images - a picture of "Mars Today" and a picture of "Ancient Mars" when liquid water flowed across the planet billions of years ago.</p>
         </div>
     
 
         <div class="grid tablet-desktop">
                     <figure>
-                        <a href="multipage.html" target="_blank"><img src="multipage.png" width="20%" height="40%" alt="Boiler App web page"></a>
+                        <a href="multipage.html" target="_blank"><img src="boiler.jpg" width="20%" height="40%" alt="Boiler App web page"></a>
                         <figcaption>I made this web page in my Mobile App class. I implemented a password-based entry page, a page to get basic information about the boiler such as the boiler ID, 
                              date of purchase, maximum allowable values of pressure and temperature, and an ability to change the password. I created a page to allow the user to change the basic 
                              information about the boiler and a page to enter data — temperature and pressure.</figcaption>
@@ -60,7 +60,7 @@
             
                     <figure>
                         <a href="home.html" target="_blank"><img src="alien.png" width="20%" height="40%" alt="Alien Game"></a>
-                        <figcaption>In this Game, the user has to click on the UFOs to destroy them.</figcaption>
+                        <figcaption>In this Game, the user has to click on the UFOs to destroy them before they land on Eart.</figcaption>
                     </figure>
 
                     <figure>
@@ -69,12 +69,12 @@
                     </figure>
 
                     <figure>
-                        <a href="Bootstrap/home.html" target="_blank"><img src="Bootstrap/home.png" width="20%" height="40%" alt="Star Wars movies"></a>
+                        <a href="Bootstrap/home.html" target="_blank"><img src="Bootstrap/Images/SWsequel.jpg" width="20%" height="40%" alt="Star Wars movies"></a>
                         <figcaption>Even though the course covered mobile design using jQuery UI, a framework called Bootstrap is used more widely in the industry to make responsive web pages.
                              I used Bootstrap in order to display the nine Skywalker Saga Star Wars movies over three different pages in this Site.</figcaption>
                     </figure>
                     <figure>
-                        <a href="flexbox/home.html" target="_blank"><img src="flexbox/home.png" width="20%" height="40%" alt="my Childhood hobby"></a>
+                        <a href="flexbox/home.html" target="_blank"><img src="flexbox/images/gaming.jpg" width="20%" height="40%" alt="my Childhood hobby"></a>
                         <figcaption>I used Flexbox in order to format this page based on my favorite childhood hobby, which was playing Nintendo and Super Nintendo games.</figcaption>
                     </figure>
                     <figure>
