--- a/Portfolio/Mobile_App.html
+++ b/Portfolio/Mobile_App.html
@@ -15,6 +15,15 @@
     <link rel="icon" sizes="192x192" href="images/android-chrome-192.png">
 </head>
 <body>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-351JV3Y637"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-351JV3Y637');
+</script>
 <div id="container">
     <!--Use the header area for the website name or logo-->
     <header>
