--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -38,9 +38,10 @@
         <article>
             <div id="home">
                 <h2>Home</h2>
-                    <h3>I have 5 years of work experience with Walmart.</h3>     
-                    <h3>I just completed the Web Applications Development certificate at Wilmington University.</h3>
-                    <h3>I now desire to be employed as a Web Developer.</h3>
+                    <h3>Welcome to my Web Developer Portfolio!</h3>
+                    <h3>I have more than 5 years of work experience at Walmart.</h3>     
+                    <h3>I completed the Web Applications Development certificate at Wilmington University.</h3>
+                   
             </div>  
     </article>
     </main>
