--- a/index.html
+++ b/index.html
@@ -14,12 +14,32 @@
   <h1>Aaron Jazzar</h1>
 </header>
 <body>
+  <article>
   <h2>Hello! I hope to become a Web Developer.</h2>
-  <p>I am a Certified Pharmacy Technician living in Bradenton, Florida.
-    Please take a look at my Website and feel free to <a href="mailto:ajazzar@mail.usf.edu">Email Me </a>.
+    <p>I live in Bradenton, Florida.</p>
+    <p>Please take a look at this Website and feel free to <a href="#contact">contact me<a>.</p>
+  </article>
+  <hr>
+  <article>
   <h2>About Aaron</h2>
-  <p>After graduating with a Web Applications Certificate from Wilmington University, I made an ePortfolio, which can be found <a href="https://ajazzar.github.io/portfolio">here/</a></p>
+  <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio, which can be found <a href="https://ajazzar.github.io/portfolio">here</a>.</p>
+  <p>I have a passion for Web Development and I really enjoy working with others.</p>
+  <p>Currently, I work at Walmart as a Certified Pharmacy Technican. If you are looking to hire a new Developer, please reach out!</p>  
+  </article>
+    <hr>
+  <article id="contact">
+  <h2>Contact Aaron</h2>
+    <p>Please feel free to contact or follow me:</p>
+    <ol>
+      <li><a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b">LinkedIn</a></li>
+      <li><a href="https://github.com/ajazzar">GitHub</li>
+      <li><a href="mailto:ajazzar@mail.usf.edu">email me</a></li>
+    </ol>
+    </article>
 </body>
 <footer>
+		<p>© Copyright Information</p>
+		<p>Credit to Aaron<br>
+  </p>
 </footer>
 </html>
