--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 </header>
 <body>
   <article>
-  <h2>Hello! I hope to become a Web Developer.</h2>
+  <h2>Hello! My name is Aaron.</h2>
     <p>I live in Bradenton, Florida.</p>
     <p>Please take a look at this Website and feel free to <a href="#contact">contact me<a>.</p>
   </article>
   <hr>
   <article>
-  <h2>About Aaron</h2>
+  <h3>About Aaron</h3>
   <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio, which can be found <a href="https://ajazzar.github.io/portfolio">here</a>.</p>
   <p>I have a passion for Web Development and I really enjoy working with others.</p>
   <p>Currently, I work at Walmart as a Certified Pharmacy Technican. If you are looking to hire a new Developer, please reach out!</p>  
   </article>
     <hr>
   <article id="contact">
-  <h2>Contact Aaron</h2>
+  <h3>Contact Aaron</h3>
     <p>Please feel free to contact or follow me:</p>
     <ol>
       <li><a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b">LinkedIn</a></li>
