--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
   <article>
   <h2>Hello! My name is Aaron.</h2>
     <p>I live in Bradenton, Florida.</p>
-    <p>Please take a look at this Website and feel free to <a href="#contact">contact me<a>.</p>
+    <p>Please take a look at my Portfolio and feel free to <a href="#contact">contact me<a>.</p>
   </article>
   <hr>
   <article>
   <h3>About Aaron</h3>
   <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio, which can be found <a href="https://ajazzar.github.io/portfolio">here</a>.</p>
+  <p>I included in my ePortfolio various assignments from 3 different College classes:
+	  <ul>
+		   <li>JavaScript</li>
+		   <li>PHP Foundations</li>
+		   <li>Mobile App</li>
+	  </ul>
   <p>I have a passion for Web Development and I really enjoy working with others.</p>
   <p>Currently, I work at Walmart as a Certified Pharmacy Technican. If you are looking to hire a new Developer, please reach out!</p>  
   </article>
