--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <hr>
   <article>
   <h3>About Aaron</h3>
-  <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio, which can be found <a href="https://ajazzar.github.io/portfolio">here</a>.</p>
+  <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio, which can be found <a href="https://ajazzar.github.io/Portfolio">here</a>.</p>
   <p>I included in my ePortfolio various assignments from 3 different College classes:
 	  <ul>
 		   <li>JavaScript</li>
@@ -44,8 +44,8 @@
     </article>
 </body>
 <footer>
-		<p>© Copyright Information</p>
-		<p>Credit to Aaron<br>
+		<p>© Copyright 2021</p>
+		<p>Credit: Aaron Jazzar<br>
   </p>
 </footer>
 </html>
