--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <header>
   <h1>Aaron Jazzar</h1>
+  <a href="https://github.com/ajazzar/ajazzar.github.io/blob/main/Portfolio/images/aaron_photo.JPG" alt="my Photo"></a>
 </header>
 <body>
   <article>
