--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <header>
   <h1>Aaron Jazzar</h1>
-  <a href="https://github.com/ajazzar/ajazzar.github.io/blob/main/Portfolio/images/aaron_photo.JPG" alt="my Photo"></a>
+  <img src="https://github.com/ajazzar/ajazzar.github.io/blob/main/Portfolio/images/aaron_photo.JPG" alt="my Photo" width="500px">
 </header>
 <body>
   <article>
@@ -23,7 +23,8 @@
   <hr>
   <article>
   <h3>About Aaron</h3>
-  <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio, which can be found <a href="https://ajazzar.github.io/Portfolio">here</a>.</p>
+  <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio, which can be found 
+	  <a href="https://ajazzar.github.io/Portfolio" target="_blank">here</a>.</p>
   <p>I included in my ePortfolio various assignments from 3 different College classes:
 	  <ul>
 		   <li>JavaScript</li>
@@ -38,9 +39,9 @@
   <h3>Contact Aaron</h3>
     <p>Please feel free to contact or follow me:</p>
     <ol>
-      <li><a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b">LinkedIn</a></li>
-      <li><a href="https://github.com/ajazzar">GitHub</li>
-      <li><a href="mailto:ajazzar@mail.usf.edu">email me</a></li>
+      <li><a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b" target="_blank">LinkedIn</a></li>
+      <li><a href="https://github.com/ajazzar" target="_blank">GitHub</li>
+      <li><a href="mailto:ajazzar@mail.usf.edu" target="_blank">email me</a></li>
     </ol>
     </article>
 </body>
