--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <header>
   <h1>Aaron Jazzar</h1>
-  <img src="https://github.com/ajazzar/ajazzar.github.io/blob/main/Portfolio/images/aaron_photo.JPG" alt="my Photo" width="500px">
+  <img src="https://raw.githubusercontent.com/ajazzar/ajazzar.github.io/main/Portfolio/images/aaron_photo.JPG" alt="my Photo" width="500px">
 </header>
 <body>
   <article>
