--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <header>
   <h1>Aaron Jazzar</h1>
-  <img src="https://raw.githubusercontent.com/ajazzar/ajazzar.github.io/main/Portfolio/images/aaron_photo.JPG" alt="my Photo" width="500px">
+  <img src="https://raw.githubusercontent.com/ajazzar/ajazzar.github.io/main/Portfolio/images/aaron_photo.JPG" alt="my Photo" width="500px" height="500px">
 </header>
 <body>
   <article>
@@ -23,13 +23,12 @@
   <hr>
   <article>
   <h3>About Aaron</h3>
-  <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio, which can be found 
-	  <a href="https://ajazzar.github.io/Portfolio" target="_blank">here</a>.</p>
+  <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio.</p>
   <p>I included in my ePortfolio various assignments from 3 different College classes:
 	  <ul>
-		   <li>JavaScript</li>
-		   <li>PHP Foundations</li>
-		   <li>Mobile App</li>
+		  <li><a href="https://ajazzar.github.io/Portfolio/JavaScript.html">JavaScript</a></li>
+		  <li><a href="https://ajazzar.github.io/Portfolio/PHP.html">PHP Foundations</a></li>
+		  <li><a href="https://ajazzar.github.io/Portfolio/Mobile_App.html">Mobile App</a></li>
 	  </ul>
   <p>I have a passion for Web Development and I really enjoy working with others.</p>
   <p>Currently, I work at Walmart as a Certified Pharmacy Technican. If you are looking to hire a new Developer, please reach out!</p>  
