--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio.</p>
   <p>I included in my ePortfolio various assignments from 3 different College classes:
 	  <ul>
-		  <li><a href="https://ajazzar.github.io/Portfolio/JavaScript.html">JavaScript</a></li>
-		  <li><a href="https://ajazzar.github.io/Portfolio/PHP.html">PHP Foundations</a></li>
-		  <li><a href="https://ajazzar.github.io/Portfolio/Mobile_App.html">Mobile App</a></li>
+		  <li><a href="https://ajazzar.github.io/Portfolio/JavaScript.html" target="_blank">JavaScript</a></li>
+		  <li><a href="https://ajazzar.github.io/Portfolio/PHP.html" target="_blank">PHP Foundations</a></li>
+		  <li><a href="https://ajazzar.github.io/Portfolio/Mobile_App.html" target="_blank">Mobile App</a></li>
 	  </ul>
   <p>I have a passion for Web Development and I really enjoy working with others.</p>
   <p>Currently, I work at Walmart as a Certified Pharmacy Technican. If you are looking to hire a new Developer, please reach out!</p>  
