--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <article>
   <h2>Hello! My name is Aaron.</h2>
     <p>I live in Bradenton, Florida.</p>
-    <p>Please take a look at my Portfolio and feel free to <a href="#contact">contact me<a>.</p>
+    <p>Please take a look at my Portfolio and feel free to <a href="#contact">contact me</a>.</p>
   </article>
   <hr>
   <article>
