--- a/Portfolio/PHP.html
+++ b/Portfolio/PHP.html
@@ -75,8 +75,8 @@
 
     <!--Use the footer area to add webpage footer content-->
     <footer>
-        <p>email: <a href="mailto:ajazzar001@my.wilmu.edu">ajazzar001@my.wilmu.edu</a></p>
-        <p>&copy; Copyright 2021. All Rights Reserved. The information on this website is confidential.</p>
+          <p>&copy; Copyright 2021</p>
+         <p>Credit: Aaron Jazzar</p>
     </footer>
 </div>
 </body>
