--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <header>
   <h1>Aaron Jazzar</h1>
+	<!--Some inline style rules and alternative text for photo-->
   <img src="https://raw.githubusercontent.com/ajazzar/ajazzar.github.io/main/Portfolio/images/aaron_photo.JPG" alt="my Photo" width="500px" height="500px">
 </header>
 <body>
