--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <img src="https://raw.githubusercontent.com/ajazzar/ajazzar.github.io/main/Portfolio/images/aaron_photo.JPG" alt="my Photo" width="500px" height="500px">
 </header>
 <body>
+	<!--Article tags with header-2 tags-->
   <article>
   <h2>Hello! My name is Aaron.</h2>
     <p>I live in Bradenton, Florida.</p>
@@ -26,6 +27,7 @@
   <h3>About Aaron</h3>
   <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio.</p>
   <p>I included in my ePortfolio various assignments from 3 different College classes:
+	  <!--Three different unordered list items that can be clicked on to open a new tab to view the corresponding web page-->
 	  <ul>
 		  <li><a href="https://ajazzar.github.io/Portfolio/JavaScript.html" target="_blank">JavaScript</a></li>
 		  <li><a href="https://ajazzar.github.io/Portfolio/PHP.html" target="_blank">PHP Foundations</a></li>
