--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <h3>About Aaron</h3>
   <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio.</p>
   <p>I included in my ePortfolio various assignments from 3 different College classes:
-	  <!--Three different unordered list items that can be clicked on to open a new tab to view the corresponding web page-->
+	  <!--Three unordered list items that are web page links that open in a new tab-->
 	  <ul>
 		  <li><a href="https://ajazzar.github.io/Portfolio/JavaScript.html" target="_blank">JavaScript</a></li>
 		  <li><a href="https://ajazzar.github.io/Portfolio/PHP.html" target="_blank">PHP Foundations</a></li>
@@ -40,6 +40,7 @@
   <article id="contact">
   <h3>Contact Aaron</h3>
     <p>Please feel free to contact or follow me:</p>
+    <!--Three ordered list items that are links that open in a new tab-->
     <ol>
       <li><a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b" target="_blank">LinkedIn</a></li>
       <li><a href="https://github.com/ajazzar" target="_blank">GitHub</li>
