--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 
 </head>
+<body>
 <header>
   <h1>Aaron Jazzar</h1>
 	<!--Some inline style rules and alternative text for photo-->
-  <img src="https://raw.githubusercontent.com/ajazzar/ajazzar.github.io/main/Portfolio/images/aaron_photo.JPG" alt="my Photo" width="500px" height="500px">
+  <img src="https://raw.githubusercontent.com/ajazzar/ajazzar.github.io/main/Portfolio/images/aaron_photo.JPG" alt="my Photo" width="500" height="500">
 </header>
-<body>
+<main>
 	<!--Article tags with header-2 tags-->
   <article>
   <h2>Hello! My name is Aaron.</h2>
@@ -42,15 +43,16 @@
     <p>Please feel free to contact or follow me:</p>
     <!--Three ordered list items that are links that open in a new tab-->
     <ol>
-      <li><a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b" target="_blank">LinkedIn</a></li>
-      <li><a href="https://github.com/ajazzar" target="_blank">GitHub</li>
-      <li><a href="mailto:ajazzar@mail.usf.edu" target="_blank">email me</a></li>
+      <a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b" target="_blank"><li>LinkedIn</li></a>
+	    <a href="https://github.com/ajazzar" target="_blank"><li>GitHub</li></a>
+      <a href="mailto:ajazzar@mail.usf.edu" target="_blank"><li>email me</li></a>
     </ol>
     </article>
-</body>
+</main>
 <footer>
 		<p>© Copyright 2021</p>
 		<p>Credit: Aaron Jazzar<br>
   </p>
 </footer>
+</body>
 </html>
