--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
   <h1>Aaron Jazzar</h1>
 	<!--Some inline style rules and alternative text for photo-->
-  <img src="https://raw.githubusercontent.com/ajazzar/ajazzar.github.io/main/Portfolio/images/aaron_photo.JPG" alt="my Photo" width="500" height="500">
+  <img src="IMG_0268.jpg" alt="my Photo" width="500" height="500">
 </header>
 <main>
 	<!--Article tags with header-2 tags-->
