--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <p>Please feel free to contact or follow me:</p>
     <!--Three ordered list items that are links that open in a new tab-->
     <ol>
-      <a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b" target="_blank"><li>LinkedIn</li></a>
-	    <a href="https://github.com/ajazzar" target="_blank"><li>GitHub</li></a>
-      <a href="mailto:ajazzar@mail.usf.edu" target="_blank"><li>email me</li></a>
+      <li><a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b" target="_blank">LinkedIn</a></li>
+	    <li><a href="https://github.com/ajazzar" target="_blank">GitHub</a></li>
+	    <li><a href="mailto:ajazzar@mail.usf.edu" target="_blank">email me</a></li>
     </ol>
     </article>
 </main>
