--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
   <h1>Aaron Jazzar</h1>
 	<!--Some inline style rules and alternative text for photo-->
-  <img src="/IMG_0268.JPG" alt="my Photo" width="500" height="500">
+  <img src="aaron_photo.JPG" alt="my Photo" width="500" height="500">
 </header>
 <main>
 	<!--Article tags with header-2 tags-->
