--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <img src="aaron_photo.JPG" alt="my Photo" width="500" height="500">
 </header>
 <main>
-	<!--Article tags with header-2 tags-->
+	<!--Article tags with header-2-->
   <article>
   <h2>Hello! My name is Aaron.</h2>
     <p>I live in Bradenton, Florida.</p>
@@ -25,7 +25,7 @@
   </article>
   <hr>
   <article>
-  <h3>About Aaron</h3>
+  <h2>About Aaron</h2>
   <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio.</p>
   <p>I included in my ePortfolio various assignments from 3 different College classes:
 	  <!--Three unordered list items that are web page links that open in a new tab-->
@@ -34,12 +34,14 @@
 		  <li><a href="https://ajazzar.github.io/Portfolio/PHP.html" target="_blank">PHP Foundations</a></li>
 		  <li><a href="https://ajazzar.github.io/Portfolio/Mobile_App.html" target="_blank">Mobile App</a></li>
 	  </ul>
-  <p>I have a passion for Web Development and I really enjoy working with others.</p>
-  <p>Currently, I work at Walmart as a Certified Pharmacy Technican. If you are looking to hire a new Developer, please reach out!</p>  
+ <!--Explain why I want to be a Web Developer with header-3-->
+	  <h3>Web Developer</h3>
+ <p>I have a passion for Web Development and I really enjoy working with others.</p>
+  <p>If you are looking to hire a new Developer, please reach out!</p>  
   </article>
     <hr>
   <article id="contact">
-  <h3>Contact Aaron</h3>
+  <h2>Contact Aaron</h2>
     <p>Please feel free to contact or follow me:</p>
     <!--Three ordered list items that are links that open in a new tab-->
     <ol>
@@ -50,7 +52,7 @@
     </article>
 </main>
 <footer>
-		<p>© Copyright 2021</p>
+		<p>&copy; Copyright 2021</p>
 		<p>Credit: Aaron Jazzar<br>
   </p>
 </footer>
