--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
   <h1>Aaron Jazzar</h1>
 	<!--Some inline style rules and alternative text for photo-->
-  <img src="aaron_photo.JPG" alt="my Photo" width="500" height="500">
+  <img src="aaron_photo.JPG" alt="my Photo">
 </header>
 <main>
 	<!--Article tags with header-2-->
@@ -26,7 +26,8 @@
   <hr>
   <article>
   <h2>About Aaron</h2>
-  <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, I made an ePortfolio.</p>
+  <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, 
+	  <br>I made an ePortfolio.</p>
   <p>I included in my ePortfolio various assignments from 3 different College classes:
 	  <!--Three unordered list items that are web page links that open in a new tab-->
 	  <ul>
