--- a/index.html
+++ b/index.html
@@ -20,41 +20,40 @@
 	<!--Article tags with header-2-->
   <article>
   <h2>Hello! My name is Aaron.</h2>
-    <p>I live in Bradenton, Florida.</p>
-    <p>Please take a look at my Portfolio and feel free to <a href="#contact">contact me</a>.</p>
+    <p>I live in Bradenton, Florida.Please take a look at my Portfolio and feel free to <a href="#contact">contact me</a>.</p>
   </article>
   <hr>
   <article>
   <h2>About Aaron</h2>
   <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, 
-	  <br>I made an ePortfolio.</p>
-  <p>I included in my ePortfolio various assignments from 3 different College classes:
+	  <br>I made an ePortfolio.
+  <br>I included in my ePortfolio various assignments from 3 different College classes:
 	  <!--Three unordered list items that are web page links that open in a new tab-->
 	  <ul>
 		  <li><a href="https://ajazzar.github.io/Portfolio/JavaScript.html" target="_blank">JavaScript</a></li>
 		  <li><a href="https://ajazzar.github.io/Portfolio/PHP.html" target="_blank">PHP Foundations</a></li>
 		  <li><a href="https://ajazzar.github.io/Portfolio/Mobile_App.html" target="_blank">Mobile App</a></li>
-	  </ul>
+	  </ul></p>
  <!--Explain why I want to be a Web Developer with header-3-->
 	  <h3>Web Developer</h3>
- <p>I have a passion for Web Development and I really enjoy working with others.</p>
-  <p>If you are looking to hire a new Developer, please reach out!</p>  
+ <p>I have a passion for Web Development and I really enjoy working with others.<br>
+  If you are looking to hire a new Developer, please reach out!</p>  
   </article>
     <hr>
   <article id="contact">
   <h2>Contact Aaron</h2>
-    <p>Please feel free to contact or follow me:</p>
+    <p>Please feel free to contact or follow me:<br>
     <!--Three ordered list items that are links that open in a new tab-->
     <ol>
       <li><a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b" target="_blank">LinkedIn</a></li>
 	    <li><a href="https://github.com/ajazzar" target="_blank">GitHub</a></li>
 	    <li><a href="mailto:ajazzar@mail.usf.edu" target="_blank">email me</a></li>
-    </ol>
+	  </ol></p>
     </article>
 </main>
 <footer>
-		<p>&copy; Copyright 2021</p>
-		<p>Credit: Aaron Jazzar<br>
+		<p>&copy; Copyright 2021
+	</br>Credit: Aaron Jazzar
   </p>
 </footer>
 </body>
