--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 	  </ul></p>
  <!--Explain why I want to be a Web Developer with header-3-->
 	  <h3>Web Developer</h3>
- <p>I have a passion for Web Development and I really enjoy working with others.<br>
+ <p>Currently, I am employed as a Certified Pharmacy Technician at Walmart in Bradenton. <br>
+	 I have a passion for Web Development and I really enjoy working with others.<br>
   If you are looking to hire a new Developer, please reach out!</p>  
   </article>
     <hr>
