--- a/index.html
+++ b/index.html
@@ -26,30 +26,29 @@
   <article>
   <h2>About Aaron</h2>
   <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, 
-	  <br>I made an ePortfolio.
-  <br>I included in my ePortfolio various assignments from 3 different College classes:
+	  <br>I made an ePortfolio. I included in my ePortfolio various assignments from 3 different College classes:</p>
 	  <!--Three unordered list items that are web page links that open in a new tab-->
 	  <ul>
 		  <li><a href="https://ajazzar.github.io/Portfolio/JavaScript.html" target="_blank">JavaScript</a></li>
 		  <li><a href="https://ajazzar.github.io/Portfolio/PHP.html" target="_blank">PHP Foundations</a></li>
 		  <li><a href="https://ajazzar.github.io/Portfolio/Mobile_App.html" target="_blank">Mobile App</a></li>
-	  </ul></p>
+	  </ul>
+	  <p>Currently, I am employed as a Certified Pharmacy Technician at Walmart in Bradenton.</p>
  <!--Explain why I want to be a Web Developer with header-3-->
 	  <h3>Web Developer</h3>
- <p>Currently, I am employed as a Certified Pharmacy Technician at Walmart in Bradenton. <br>
-	 I have a passion for Web Development and I really enjoy working with others.<br>
-  If you are looking to hire a new Developer, please reach out!</p>  
+ <p>I have a passion for Web Development and I really enjoy working with others.<br>
+  If you are looking to hire a new Developer, please reach out to me!</p>  
   </article>
     <hr>
   <article id="contact">
   <h2>Contact Aaron</h2>
-    <p>Please feel free to contact or follow me:<br>
+	  <p>Please feel free to contact or follow me:</p>
     <!--Three ordered list items that are links that open in a new tab-->
     <ol>
       <li><a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b" target="_blank">LinkedIn</a></li>
 	    <li><a href="https://github.com/ajazzar" target="_blank">GitHub</a></li>
 	    <li><a href="mailto:ajazzar@mail.usf.edu" target="_blank">email me</a></li>
-	  </ol></p>
+	  </ol>
     </article>
 </main>
 <footer>
