--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
 <body>
 <header>
   <h1>Aaron Jazzar</h1>
-	<!--Some inline style rules and alternative text for photo-->
+	<!--Alternative text for photo-->
   <img src="aaron_photo.JPG" alt="my Photo">
 </header>
 <main>
 	<!--Article tags with header-2-->
   <article>
-  <h2>Hello! My name is Aaron.</h2>
-    <p>I live in Bradenton, Florida.Please take a look at my Portfolio and feel free to <a href="#contact">contact me</a>.</p>
+  <h2>Greetings! My name is Aaron Jazzar.</h2>
+	  <p>I live in Bradenton, Florida. I hope to some day become a Web Developer.<br>
+	    Please take a look at my Portfolio and feel free to <a href="#contact">contact me</a>.</p>
   </article>
   <hr>
   <article>
-  <h2>About Aaron</h2>
-  <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, 
+  	<h2>About Me</h2>
+  	  <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, 
 	  <br>I made an ePortfolio. I included in my ePortfolio various assignments from 3 different College classes:</p>
 	  <!--Three unordered list items that are web page links that open in a new tab-->
 	  <ul>
@@ -33,19 +34,27 @@
 		  <li><a href="https://ajazzar.github.io/Portfolio/PHP.html" target="_blank">PHP Foundations</a></li>
 		  <li><a href="https://ajazzar.github.io/Portfolio/Mobile_App.html" target="_blank">Mobile App</a></li>
 	  </ul>
-	  <p>Currently, I am employed as a Certified Pharmacy Technician at Walmart in Bradenton.</p>
+	  <p>Currently, I am employed as a Certified Pharmacy Technician at Walmart in Bradenton. <br>
+	  As a Student at Thinkful, I can continue my journey to become a Web Developer.</p>
  <!--Explain why I want to be a Web Developer with header-3-->
-	  <h3>Web Developer</h3>
- <p>I have a passion for Web Development and I really enjoy working with others.<br>
-  If you are looking to hire a new Developer, please reach out to me!</p>  
+	 <h3>Roles of a Web Developer:</h3>
+	   <ul>
+		  <li>Partner with several teams to develop features within various mobile applications and <br>
+			  deploy micro-services / event-based systems to public/private cloud environments in support of those features</li>
+		  <li>Collaborating with other software engineers on the various layers of infrastructure for web applications</li>
+		  <li>Thriving in a fast-moving team writing solid, scalable, quality, reusable code</li>
+		   <li>Troubleshooting business and production issues</li>
+	  </ul>
+ 
+  	  <p>If you are looking to hire a new Developer, please reach out to me!</p>  
   </article>
     <hr>
   <article id="contact">
-  <h2>Contact Aaron</h2>
+  	<h2>Contact Aaron</h2>
 	  <p>Please feel free to contact or follow me:</p>
     <!--Three ordered list items that are links that open in a new tab-->
-    <ol>
-      <li><a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b" target="_blank">LinkedIn</a></li>
+    	  <ol>
+      	    <li><a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b" target="_blank">LinkedIn</a></li>
 	    <li><a href="https://github.com/ajazzar" target="_blank">GitHub</a></li>
 	    <li><a href="mailto:ajazzar@mail.usf.edu" target="_blank">email me</a></li>
 	  </ol>
