--- a/index.html
+++ b/index.html
@@ -7,19 +7,28 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
 
-<link href="style.css" rel="stylesheet" type="text/css" />
+<link href="/Portfolio/style2.css" rel="stylesheet" type="text/css" />
 
 </head>
 <body>
 <header>
   <h1>Aaron Jazzar</h1>
-	<!--Alternative text for photo-->
-  <img src="aaron_photo.JPG" alt="my Photo">
+	
 </header>
+	 <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="/Portfolio/JavaScript.html">JavaScript</a></li>
+            <li><a href="/Portfolio/PHP.html">PHP</a></li>
+            <li><a href="/Portfolio/Mobile_App.html">Mobile App</a></li>
+        </ul>
+    </nav>
 <main>
+	<!--Alternative text for photo-->
+  	<img src="aaron_photo.JPG" alt="my Photo">
 	<!--Article tags with header-2-->
   <article>
-  <h2>Greetings! My name is Aaron Jazzar.</h2>
+  	<h2>Greetings! My name is Aaron Jazzar.</h2>
 	  <p>I live in Bradenton, Florida. I hope to some day become a Web Developer.<br>
 	    Please take a look at my Portfolio and feel free to <a href="#contact">contact me</a>.</p>
   </article>
