--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
 
-<link href="/Portfolio/style2.css" rel="stylesheet" type="text/css" />
+<link href="/Portfolio/css/styles2.css" rel="stylesheet" type="text/css" />
 
 </head>
 <body>
