--- a/Portfolio/JavaScript.html
+++ b/Portfolio/JavaScript.html
@@ -19,9 +19,8 @@
     <!--Use the header area for the website name or logo-->
     <header>
         <figure>
-            <h1>Aaron Jazzar, Web Developer</h1>
+            <h1>Aaron Jazzar</h1>
         </figure>
-    </header>
 
     <!--Use the nav area to add hyperlinks to other pages within the website-->
     <nav>
@@ -32,6 +31,7 @@
             <li><a href="Mobile_App.html">Mobile App</a></li>
         </ul>
     </nav>
+     </header>
 
     <!--Use the main area to add the main content of the webpage-->
     <main>
