--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 
 </head>
 <body>
-<header>
-  <h1>Aaron Jazzar</h1>
-	
-</header>
-	 <nav>
+<div id="container">
+    <!--Use the header area for the website name or logo-->
+    <header>
+            <h1>Aaron Jazzar</h1>
+      <br>
+
+    <!--Use the nav area to add hyperlinks to other pages within the website-->
+    <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="/Portfolio/JavaScript.html">JavaScript</a></li>
-            <li><a href="/Portfolio/PHP.html">PHP</a></li>
-            <li><a href="/Portfolio/Mobile_App.html">Mobile App</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="JavaScript.html">JavaScript</a></li>
+            <li><a href="PHP.html">PHP</a></li>
+            <li><a href="Mobile_App.html">Mobile App</a></li>
         </ul>
     </nav>
+     </header>
 <main>
 	<!--Alternative text for photo-->
   	<img src="aaron_photo.JPG" alt="my Photo">
