--- a/Portfolio/PHP.html
+++ b/Portfolio/PHP.html
@@ -18,20 +18,19 @@
 <div id="container">
     <!--Use the header area for the website name or logo-->
     <header>
-        <figure>
-            <h1>Aaron Jazzar, Web Developer</h1>
-        </figure>
-    </header>
+            <h1>Aaron Jazzar</h1>
+      <br>
 
     <!--Use the nav area to add hyperlinks to other pages within the website-->
     <nav>
         <ul>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="JavaScript.html">JavaScript</a></li>
             <li><a href="PHP.html">PHP</a></li>
             <li><a href="Mobile_App.html">Mobile App</a></li>
         </ul>
     </nav>
-
+     </header>
     <!--Use the main area to add the main content of the webpage-->
     <main>
         <div class="mobile">
@@ -48,25 +47,25 @@
          </div>
         <div class="grid tablet-desktop">
                     <figure>
-                        <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week_7" target="_blank"><img src="week_7/landscape.jpg" width="20%" height="40%" alt="image of tree"></a>
+                        <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week_7" target="_blank"><img src="week_7/landscape.jpg" alt="image of tree"></a>
                         <figcaption>I made a Landscape website in my PHP class. I created a PHP page that extracts a customer’s bill amount and the amount paid. Then it calculates the amount due. 
                              If the amount due is greater than 0, an email is generated and sent to the customer with that amount in the message. If the amount due is zero or there is a credit, a thank-you email is generated that thanks 
                              the customer for his or her payment.</figcaption>
                     </figure>
             
                     <figure>
-                        <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week_6" target="_blank"><img src="week_6/firstaid.jpg" width="20%" height="40%" alt="Doctor Who database"></a>
+                        <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week_6" target="_blank"><img src="week_6/firstaid.jpg" alt="Doctor Who database"></a>
                         <figcaption>I made a fictional Doctor Who website. I created a database named doctorWho. Then I created a page that allows Doctor Who’s assistant to add a new patient record.
                          Then, I made a page that displays three or more fields from each of the patient records added. The patient’s first and last names and a unique identifier along with other information are displayed on that page.
                          I created a page that display all records from any one table from the Doctor Who database. I named this page getRecords.php.</figcaption>
                     </figure>
 
                     <figure>
-                        <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week_3" target="_blank"><img src="week_3/cookie.jpg" width="20%" height="40%" alt="form that adds cookies to computer"></a>
+                        <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week_3" target="_blank"><img src="week_3/cookie.jpg" alt="form that adds cookies to computer"></a>
                         <figcaption>I created a form that requests the user for his or her name, age, and gender. The information entered is used to set cookies on the user's computer. The cookies then expire in a week.</figcaption>
                     </figure>
                     <figure>
-                        <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week 2" target="_blank"><img src="book.jpg" width="20%" height="40%" alt="book title array"></a>
+                        <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week_2" target="_blank"><img src="book.jpg" alt="book title array"></a>
                         <figcaption>I created a page that contains an array of 20 book titles. The page has an input box for the user to enter the title and, as the user continues typing, the page displays all possible matches (i.e., hints).</figcaption>
                     </figure>
         </div>
