--- a/Portfolio/Mobile_App.html
+++ b/Portfolio/Mobile_App.html
@@ -5,6 +5,7 @@
 <html lang="en">
 <head>
     <title>Mobile App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles2.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,24 +16,22 @@
     <link rel="icon" sizes="192x192" href="images/android-chrome-192.png">
 </head>
 <body>
- 
 <div id="container">
     <!--Use the header area for the website name or logo-->
     <header>
-        <figure>
-            <h1>Aaron Jazzar, Web Developer</h1>
-        </figure>
-    </header>
+            <h1>Aaron Jazzar</h1>
+      <br>
 
     <!--Use the nav area to add hyperlinks to other pages within the website-->
     <nav>
         <ul>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="JavaScript.html">JavaScript</a></li>
             <li><a href="PHP.html">PHP</a></li>
             <li><a href="Mobile_App.html">Mobile App</a></li>
         </ul>
     </nav>
-
+     </header>
     <!--Use the main area to add the main content of the webpage-->
     <main>
         <div class="mobile">
@@ -51,33 +50,33 @@
 
         <div class="grid tablet-desktop">
                     <figure>
-                        <a href="multipage.html" target="_blank"><img src="boiler.jpg" width="20%" height="40%" alt="Boiler App web page"></a>
+                        <a href="multipage.html" target="_blank"><img src="boiler.jpg" alt="Boiler App web page"></a>
                         <figcaption>I made this web page in my Mobile App class. I implemented a password-based entry page, a page to get basic information about the boiler such as the boiler ID, 
                              date of purchase, maximum allowable values of pressure and temperature, and an ability to change the password. I created a page to allow the user to change the basic 
                              information about the boiler and a page to enter data — temperature and pressure.</figcaption>
                     </figure>
             
                     <figure>
-                        <a href="home.html" target="_blank"><img src="alien.png" width="20%" height="40%" alt="Alien Game"></a>
+                        <a href="home.html" target="_blank"><img src="alien.png" alt="Alien Game"></a>
                         <figcaption>In this Game, the user has to click on the UFOs to destroy them before they land on Eart.</figcaption>
                     </figure>
 
                     <figure>
-                        <a href="../Batter/home.html" target="_blank"><img src="baseball.png" width="20%" height="40%" alt="baseball and bat game"></a>
+                        <a href="../Batter/home.html" target="_blank"><img src="baseball.png" alt="baseball and bat game"></a>
                         <figcaption>Using jQuery, the user clicks on the page button in order to swing the bat and hit the baseball in this game.</figcaption>
                     </figure>
 
                     <figure>
-                        <a href="Bootstrap/home.html" target="_blank"><img src="Bootstrap/Images/SWsequel.jpg" width="20%" height="40%" alt="Star Wars movies"></a>
+                        <a href="Bootstrap/home.html" target="_blank"><img src="Bootstrap/Images/SWsequel.jpg" alt="Star Wars movies"></a>
                         <figcaption>Even though the course covered mobile design using jQuery UI, a framework called Bootstrap is used more widely in the industry to make responsive web pages.
                              I used Bootstrap in order to display the nine Skywalker Saga Star Wars movies over three different pages in this Site.</figcaption>
                     </figure>
                     <figure>
-                        <a href="flexbox/home.html" target="_blank"><img src="flexbox/images/gaming.jpg" width="20%" height="40%" alt="my Childhood hobby"></a>
+                        <a href="flexbox/home.html" target="_blank"><img src="flexbox/images/gaming.jpg" alt="my Childhood hobby"></a>
                         <figcaption>I used Flexbox in order to format this page based on my favorite childhood hobby, which was playing Nintendo and Super Nintendo games.</figcaption>
                     </figure>
                     <figure>
-                        <a href="Mars/Mars.html" target="_blank"><img src="Mars/Images/mars.png" width="20%" height="40%" alt="Mars then and now"></a>
+                        <a href="Mars/Mars.html" target="_blank"><img src="Mars/Images/mars.png" alt="Mars then and now"></a>
                         <figcaption>When the user clicks on this page, the picture increases in size from 50 pixels to 500 pixels and the font size of the title increases, too. 
                              There are two images - a picture of "Mars Today" and a picture of "Ancient Mars" when liquid water flowed across the planet billions of years ago.</figcaption>
                     </figure>
