--- a/Portfolio/JavaScript.html
+++ b/Portfolio/JavaScript.html
@@ -5,6 +5,7 @@
 <html lang="en">
 <head>
     <title>JavaScript</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles2.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
