--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <!--Use the nav area to add hyperlinks to other pages within the website-->
     <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="JavaScript.html">JavaScript</a></li>
-            <li><a href="PHP.html">PHP</a></li>
-            <li><a href="Mobile_App.html">Mobile App</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Portfolio/JavaScript.html">JavaScript</a></li>
+            <li><a href="Portfolio/PHP.html">PHP</a></li>
+            <li><a href="Portfolio/Mobile_App.html">Mobile App</a></li>
         </ul>
     </nav>
      </header>
