--- a/starter-thinkfulbnb-main/index.html
+++ b/starter-thinkfulbnb-main/index.html
@@ -42,11 +42,11 @@
           </div>
           <div>
           <label for="arrive">Arrive</label>
-          <input type="date" id="arrive" name="trip-start" placeholder="mm/dd/yyyy">
+          <input type="date" id="arrive" name="trip-start">
           </div>
           <div>
           <label for="depart">Depart</label>
-          <input type="date" id="depart" name="trip-end" placeholder="mm/dd/yyyy">
+          <input type="date" id="depart" name="trip-end">
           </div>
           <div>
             <label for="type">Type</label>
