--- a/starter-thinkfulbnb-main/index.html
+++ b/starter-thinkfulbnb-main/index.html
@@ -36,19 +36,19 @@
         <h2>Find the perfect vacation rental</h2>
         <!-- Create a form here -->
         <form>
-          <div>
+          <div class="group">
           <label for="location">Location</label>
           <input id="location" type="text" name="location" placeholder="Search destination"/>
           </div>
-          <div>
+          <div class="group">
           <label for="arrive">Arrive</label>
           <input type="date" id="arrive" name="trip-start">
           </div>
-          <div>
+          <div class="group">
           <label for="depart">Depart</label>
           <input type="date" id="depart" name="trip-end">
           </div>
-          <div>
+          <div class="group">
             <label for="type">Type</label>
         
             <select name="type" id="type" size="1">
@@ -68,7 +68,7 @@
               <option value="yurt">Yurt</option>
             </select>
             </div>
-            <div>
+            <div class="group">
             <button>Search</button>
             </div>
         </form>
