--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		  <li><a href="https://ajazzar.github.io/Portfolio/PHP.html" target="_blank">PHP Foundations</a></li>
 		  <li><a href="https://ajazzar.github.io/Portfolio/Mobile_App.html" target="_blank">Mobile App</a></li>
 	  </ul>
-	  <p>Currently, I am employed as a Certified Pharmacy Technician at Walmart in Bradenton. <br>
-	  As a Student at Thinkful, I can continue my journey to become a Web Developer.</p>
+	  <p>
+	  As a Student at Thinkful, I continue my journey to become a Web Developer.</p>
  <!--Explain why I want to be a Web Developer with header-3-->
 	 <h3>Roles of a Web Developer:</h3>
 	   <ul>
