--- a/index.html
+++ b/index.html
@@ -59,12 +59,11 @@
 		   <li>Troubleshooting business and production issues</li>
 	  </ul>
  
-  	  <p>If you are looking to hire a new Developer, please reach out to me!</p>  
   </article>
     <hr>
   <article id="contact">
   	<h2>Contact Aaron</h2>
-	  <p>Please feel free to contact or follow me:</p>
+	  <p>Please feel free to contact:</p>
     <!--Three ordered list items that are links that open in a new tab-->
     	  <ol>
       	    <li><a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b" target="_blank">LinkedIn</a></li>
